--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moleculer-foo",
+  "name": "moleculer-petstore-lab",
   "version": "1.0.0",
   "description": "My Moleculer-based microservices project",
   "scripts": {
@@ -22,8 +22,9 @@
     "moleculer-repl": "^0.6.4"
   },
   "dependencies": {
+    "moleculer-web": "^0.9.0",
     "moleculer": "^0.14.10"
-  },
+},
   "engines": {
     "node": ">= 10.x.x"
   },
