--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "moleculer-repl": "^0.6.4"
   },
   "dependencies": {
-    "moleculer-web": "^0.9.0",
-    "moleculer": "^0.14.10"
-},
+    "jsonwebtoken": "^8.5.1",
+    "moleculer": "^0.14.10",
+    "moleculer-web": "^0.9.0"
+  },
   "engines": {
     "node": ">= 10.x.x"
   },
