--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moleculer-repl": "^0.6.4"
   },
   "dependencies": {
+    "ioredis": "^4.26.0",
     "jsonwebtoken": "^8.5.1",
     "moleculer": "^0.14.10",
     "moleculer-web": "^0.9.0"
