--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,3 +35,10 @@ services:
     environment:
         ME_CONFIG_MONGODB_ADMINUSERNAME: admin
         ME_CONFIG_MONGODB_ADMINPASSWORD: admin
+
+  redis:
+    container_name: redis-server
+    image: redis
+    restart: always
+    ports:
+        - 6379:6379
